--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap");
+
+:root {
+  --primary: #7e88f4;
+  --secondary: #717be4;
+  --tertiary: #f9f871;
+  --quaternary: #ffc75f;
+  --error: #eb5757;
+  --success: #27ae60;
+  --text-color: #4b4453;
+  --light-text-color: #d5cabd;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Inter", sans-serif;
+  color: var(--text-color);
 }
 
 a {
@@ -11,6 +28,17 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
