request section done

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,8 +3,8 @@
 :root {
   --primary: #7e88f4;
   --secondary: #717be4;
-  --tertiary: #f9f871;
-  --quaternary: #ffc75f;
+  --tertiary: #ffa086;
+  --quaternary: #ffcc67;
   --error: #eb5757;
   --success: #27ae60;
   --text-color: #4b4453;
