--- a/components/Home/Content/style.module.scss
+++ b/components/Home/Content/style.module.scss
@@ -1,6 +1,7 @@
 .home__wrapper {
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
+  overflow-y: hidden;
 
   & > .sidebar__wrapper {
     flex: 0 0 20rem;
