--- a/components/Request/style.module.scss
+++ b/components/Request/style.module.scss
@@ -2,6 +2,7 @@
 
 .request__content {
   height: 100%;
+  overflow-y: auto;
   padding: 3rem 4rem;
   display: flex;
   flex-direction: column;
@@ -38,7 +39,7 @@
     & .body {
       & .info {
         display: grid;
-        grid-template-columns: repeat(5, 1fr);
+        grid-template-columns: repeat(2, 1fr);
         justify-items: center;
         padding: 0.5rem 0;
 
@@ -66,8 +67,61 @@
         padding: 1rem;
         margin: 0.5rem 0;
         border-radius: 4px;
-        font-size: 1rem;
-        line-height: 1.5rem;
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+      }
+    }
+
+    & .footer {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      gap: 0.5rem;
+      margin-top: 1rem;
+
+      & button {
+        outline: none;
+        border-radius: 8px;
+        padding: 0.5rem 1.5rem;
+        font-size: 0.875rem;
+        line-height: 1.25rem;
+        cursor: pointer;
+        background: transparent;
+        @include transition-colors;
+
+        &.approve {
+          border: 1px solid var(--quaternary);
+        }
+
+        &.reject {
+          border: 1px solid var(--tertiary);
+        }
+
+        &:hover {
+          color: #fff;
+          &.approve {
+            background: var(--quaternary);
+          }
+          &.reject {
+            background: var(--tertiary);
+          }
+        }
+
+        &.active {
+          color: #fff;
+          &.approve {
+            background: var(--quaternary);
+          }
+          &.reject {
+            background: var(--tertiary);
+          }
+        }
+      }
+    }
+
+    @media (min-device-width: 1024px) {
+      & .body > .info {
+        grid-template-columns: repeat(4, 1fr);
       }
     }
   }
