--- a/styles/preset.scss
+++ b/styles/preset.scss
@@ -5,3 +5,9 @@ $shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+
+@mixin transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 250ms;
+}
